[gd_scene load_steps=10 format=3 uid="uid://skx6u15sdxh"]

[ext_resource type="PackedScene" uid="uid://b5f4cvf272kh2" path="res://Scenes/characters/battle/battle_entity.tscn" id="1_d0qin"]
[ext_resource type="PackedScene" uid="uid://b1s71hosugqju" path="res://UI/inventory_gui.tscn" id="2_55h7t"]
[ext_resource type="PackedScene" uid="uid://c5r06amfsateg" path="res://UI/battle_gui.tscn" id="2_ldwgg"]
[ext_resource type="Script" path="res://Scenes/characters/battle/battle_entity_player.gd" id="2_umwwl"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://q575ewtqb03g" path="res://Resources/AnimationNodeStateMachine/default.tres" id="7_kbtx7"]
[ext_resource type="SpriteFrames" uid="uid://djkna70chus8q" path="res://Resources/SpriteFrames/player.tres" id="8_0sqpw"]
[ext_resource type="AnimationLibrary" uid="uid://bia4tx8dc3gjm" path="res://Resources/AnimationLibrary/default_player.tres" id="9_crwk6"]
[ext_resource type="Script" path="res://Logic/components/component_inventory.gd" id="26_jxo4h"]
[ext_resource type="Script" path="res://Logic/components/component_party.gd" id="33_s503q"]

[node name="battle_entity_player_new" node_paths=PackedStringArray("my_battle_gui", "my_component_party", "my_component_inventory") groups=["load_data_scene", "save_data_scene"] instance=ExtResource("1_d0qin")]
script = ExtResource("2_umwwl")
my_battle_gui = NodePath("Battle_GUI")
my_component_party = NodePath("Components/component_party")
my_component_inventory = NodePath("Components/component_inventory")
alignment = "FRIENDS"
classification = "PLAYER"

[node name="Inventory_GUI" parent="." index="0" node_paths=PackedStringArray("my_component_party", "my_component_inventory") instance=ExtResource("2_55h7t")]
my_component_party = NodePath("../Components/component_party")
my_component_inventory = NodePath("../Components/component_inventory")

[node name="Battle_GUI" parent="." index="1" instance=ExtResource("2_ldwgg")]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="character_animation_sprite" parent="Components/component_animation" index="0"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
sprite_frames = ExtResource("8_0sqpw")
animation = &"default_idle_down"
frame = 1

[node name="character_animation_player" parent="Components/component_animation" index="2"]
libraries = {
"": ExtResource("9_crwk6")
}

[node name="character_animation_tree" parent="Components/component_animation" index="3"]
tree_root = ExtResource("7_kbtx7")
parameters/Death/TimeScale/scale = 1.0
parameters/Hurt/TimeScale/scale = 1.0
parameters/Idle/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Idle/TimeScale/scale = 1.0
parameters/Walk/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Walk/TimeScale/scale = 1.0

[node name="component_inventory" type="Node" parent="Components" index="7"]
script = ExtResource("26_jxo4h")

[node name="component_party" type="Node" parent="Components" index="8"]
script = ExtResource("33_s503q")

[editable path="Components/component_animation"]
[editable path="Components/component_ability"]
